--- a/big2.html
+++ b/big2.html
@@ -43,7 +43,7 @@
             background-color: #FFFFFF;
         }
         input[type="text"], input[type="number"], input[readonly] {
-            width: 90%;
+            width: 80%;
             height: 40px;
             padding: 10px;
             font-size: 16px;
@@ -56,6 +56,34 @@
             background-color: #EFEFEF;
             color: gray;
         }
+        .player-label {
+            display: inline-block;
+            width: 120px;
+            padding: 5px 10px;
+            margin: 5px;
+            text-align: center;
+            border-radius: 5px;
+            font-weight: bold;
+            color: white;
+        }
+        .player-label.player-1 { background-color: #8C9A78; }
+        .player-label.player-2 { background-color: #B090A0; }
+        .player-label.player-3 { background-color: #D2B282; }
+        .player-label.player-4 { background-color: #7A8FA1; }
+        table {
+            margin: 20px auto;
+            width: 90%;
+            border-collapse: collapse;
+            background-color: #FFFFFF;
+        }
+        th, td {
+            border: 1px solid #ccc;
+            padding: 10px;
+            text-align: center;
+        }
+        th { background-color: #EFEFEF; }
+        .positive { color: red; }
+        .negative { color: black; }
         .modal {
             display: none;
             position: fixed;
@@ -80,20 +108,6 @@
             background: rgba(0, 0, 0, 0.5);
             z-index: 999;
         }
-        table {
-            margin: 20px auto;
-            width: 90%;
-            border-collapse: collapse;
-            background-color: #FFFFFF;
-        }
-        th, td {
-            border: 1px solid #ccc;
-            padding: 10px;
-            text-align: center;
-        }
-        th { background-color: #EFEFEF; }
-        .positive { color: red; }
-        .negative { color: black; }
     </style>
 </head>
 <body>
@@ -155,23 +169,23 @@
         <button class="input-btn" onclick="closeResults()">關閉</button>
     </div>
 
-    <div class="overlay" id="overlay"></div>
-    <div class="modal" id="settingsModal">
+    <div id="settingsModal" class="modal">
         <h3>遊戲設定</h3>
         <input id="playerName0" type="text" placeholder="玩家 1 名稱">
         <input id="playerName1" type="text" placeholder="玩家 2 名稱">
         <input id="playerName2" type="text" placeholder="玩家 3 名稱">
         <input id="playerName3" type="text" placeholder="玩家 4 名稱">
         <div>
-            <label for="multiplier">倍率</label>
+            <label for="multiplier">倍率：</label>
             <input id="multiplier" type="number" min="1" value="1">
         </div>
         <button class="input-btn" onclick="saveSettings()">儲存設定</button>
-        <button class="input-btn" onclick="resetGame()">重置</button>
-        <button class="input-btn" onclick="closeSettingsModal()">取消</button>
+        <button class="input-btn" onclick="closeSettingsModal()">關閉</button>
     </div>
 
-    <script>
+    <div class="overlay" id="overlay"></div>
+
+<script>
         let scores = JSON.parse(localStorage.getItem("scores")) || [0, 0, 0, 0];
         let winCounts = JSON.parse(localStorage.getItem("winCounts")) || [0, 0, 0, 0];
         let roundNumber = JSON.parse(localStorage.getItem("roundNumber")) || 1;
@@ -186,6 +200,7 @@
             updateLatestScores();
         });
 
+        // 遊戲設定
         function openSettingsModal() {
             document.getElementById("settingsModal").style.display = "block";
             document.getElementById("overlay").style.display = "block";
@@ -214,8 +229,6 @@
             localStorage.setItem("multiplier", multiplier);
             closeSettingsModal();
             updatePlayerNames();
-            updateTotalScores();
-            updateLatestScores();
         }
 
         function resetGame() {
@@ -238,6 +251,7 @@
             });
         }
 
+        // 分數輸入與計算
         function setWinner(winnerIndex) {
             currentWinner = winnerIndex;
             document.getElementById("mainContainer").style.display = "none";
@@ -246,8 +260,10 @@
             const inputFields = document.getElementById("inputFields");
             inputFields.innerHTML = "";
             playerNames.forEach((name, index) => {
-                const label = document.createElement("label");
+                const label = document.createElement("span");
+                label.className = `player-label player-${index + 1}`;
                 label.textContent = name;
+
                 const input = document.createElement("input");
                 input.type = index === winnerIndex ? "text" : "number";
                 input.id = `loss${index}`;
@@ -257,8 +273,12 @@
                 } else {
                     input.placeholder = "請輸入分數";
                 }
-                inputFields.appendChild(label);
-                inputFields.appendChild(input);
+
+                const fieldWrapper = document.createElement("div");
+                fieldWrapper.style.marginBottom = "10px";
+                fieldWrapper.appendChild(label);
+                fieldWrapper.appendChild(input);
+                inputFields.appendChild(fieldWrapper);
             });
         }
 
@@ -287,6 +307,35 @@
             resetRound();
         }
 
+        function resetRound() {
+            document.getElementById("mainContainer").style.display = "block";
+            document.getElementById("inputContainer").style.display = "none";
+        }
+
+        // 每場結果
+        function openResults() {
+            document.getElementById("mainContainer").style.display = "none";
+            document.getElementById("resultsContainer").style.display = "block";
+            updateHistory();
+        }
+
+        function closeResults() {
+            document.getElementById("mainContainer").style.display = "block";
+            document.getElementById("resultsContainer").style.display = "none";
+        }
+
+        function updateHistory() {
+            const allScoresTable = document.getElementById("allScores");
+            allScoresTable.innerHTML = "";
+            history.forEach((round, index) => {
+                const row = document.createElement("tr");
+                row.innerHTML = `<td>回合 ${index + 1}</td>` + round.map(score =>
+                    `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
+                allScoresTable.appendChild(row);
+            });
+        }
+
+        // 總分與最近兩場更新
         function updateTotalScores() {
             const totalScoresTable = document.getElementById("totalScores");
             totalScoresTable.innerHTML = "";
@@ -312,33 +361,6 @@
                     `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
                 latestScoresTable.appendChild(row);
             });
-        }
-
-        function openResults() {
-            document.getElementById("mainContainer").style.display = "none";
-            document.getElementById("resultsContainer").style.display = "block";
-            updateHistory();
-        }
-
-        function closeResults() {
-            document.getElementById("mainContainer").style.display = "block";
-            document.getElementById("resultsContainer").style.display = "none";
-        }
-
-        function updateHistory() {
-            const allScoresTable = document.getElementById("allScores");
-            allScoresTable.innerHTML = "";
-            history.forEach((round, index) => {
-                const row = document.createElement("tr");
-                row.innerHTML = `<td>回合 ${index + 1}</td>` + round.map(score =>
-                    `<td class="${score > 0 ? 'positive' : 'negative'}">${score}</td>`).join("");
-                allScoresTable.appendChild(row);
-            });
-        }
-
-        function resetRound() {
-            document.getElementById("mainContainer").style.display = "block";
-            document.getElementById("inputContainer").style.display = "none";
         }
     </script>
 </body>
